Code with Inyerface

--- a/AspNetCoreApps/appsettings.json
+++ b/AspNetCoreApps/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+      "AppConnString": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=ExStudents;Integrated Security=SSPI"
+  }
 }
